attempted-fix: attempt to fix img stretching
set height to auto in attempt to fix image stretching on mobile devices

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -30,10 +30,12 @@
   display: flex;
   width: 50%;
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.6);
+  height: auto;
 }
 
 .project-gallery_img img {
   max-width: 100%;
+  height: auto;
 }
 
 /* About me */
@@ -57,6 +59,7 @@
   .project-gallery_img {
     margin-top: 30px;
     min-width: 80%;
+    height: auto;
   }
 
   .project-gallery_text{
